--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         
         <div class="education-item">
             <h3>Postgraduate Diploma in Mobile Application Development</h3>
-            <p class="details">GPA: 4.2</p>
+           <p class="details">Centennial College • GPA: 4.2</p>
         </div>
         
         <div class="education-item">
