Updated project cards

--- a/index.html
+++ b/index.html
@@ -335,22 +335,22 @@
                 <p class="project-description">Advanced relational database design and complex multi-table query optimization, demonstrating 15% efficiency improvements in data retrieval and management systems.</p>
             </div>
 
-            <div class="project-card">
-                <h3>Technology Trend Analysis</h3>
-                <div class="project-links">
-                    <a href="#">Industry Reports</a>
-                    <a href="#">Publications</a>
-                </div>
-                <p class="project-description">Comprehensive analysis of emerging technologies including mobile commerce evolution, Industry 4.0 implications, and human-computer interaction patterns across 300+ published articles.</p>
-            </div>
+<div class="project-card">
+    <h3>Human-Computer Interaction in Digital Transformation</h3>
+    <div class="project-links">
+        <a href="https://www.prismetric.com/case-studies/">Industry Case Studies</a>
+        <a href="https://medium.com/@mudrawork27">Research Articles</a>
+    </div>
+    <p class="project-description">Comprehensive analysis of how emerging technologies reshape human-technology interactions. Research includes mobile commerce user behavior evolution, Industry 4.0's impact on human-machine collaboration, and user experience patterns in enterprise software adoption. Published 300+ articles examining the intersection of technology advancement and human-centered design principles.</p>
+</div>
 
 <div class="project-card">
-    <h3>FlowCart: Delivery Management System</h3>
+    <h3>FlowCart: Empowering Female-Driven Small Businesses</h3>
     <div class="project-links">
         <a href="https://github.com/yh0416/Final-Project-5100">GitHub Repository</a>
-        <a href="#">Live Demo</a>
+        <a href="#">UX Research</a>
     </div>
-    <p class="project-description">Full-stack web application built with JavaFX and MySQL for small business delivery management. Features role-based dashboards, real-time order tracking, and automated reporting. Implemented MVC architecture with singleton patterns for scalability.</p>
+    <p class="project-description">Full-stack application addressing operational challenges faced by female-driven small business owners through intuitive interface design. Features role-based user experiences, real-time interaction patterns, and workflow optimization tailored for women entrepreneurs. Implemented user-centered design principles in JavaFX with MySQL backend, focusing on accessibility and operational efficiency for underserved business communities.</p>
 </div>
         </div>
     </div>
