--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="project-card">
                 <h3>Academic Research Publications</h3>
                 <div class="project-links">
-                    <a href="https://www.researchgate.net/profile/Mudra-Pandya">ResearchGate</a>
+                    <a href="https://www.researchgate.net/profile/Mudra-Pandya-2?ev=hdr_xprf">ResearchGate</a>
                     <a href="#">Google Scholar</a>
                 </div>
                 <p class="project-description">Machine learning research, statistical analysis, and computational methods with focus on real-world applications and methodology validation.</p>
