--- a/index.html
+++ b/index.html
@@ -419,13 +419,13 @@
         
         <div class="beyond-item">
             <!-- PHOTO 7: String art creation -->
-            <img src="string_art.jpg" alt="String Art" class="beyond-image">
+            <img src="FullSizeRender.jpeg" alt="String Art" class="beyond-image">
             <p class="beyond-label">String Art</p>
         </div>
         
         <div class="beyond-item">
             <!-- PHOTO 8: Resin art creation -->
-            <img src="resin_art.jpg" alt="Resin Art" class="beyond-image">
+            <img src="IMG_0509.jpeg" alt="Resin Art" class="beyond-image">
             <p class="beyond-label">Resin Art</p>
         </div>
     </div>
