--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <div class="beyond-grid">
         <div class="beyond-item">
             <!-- PHOTO 5: Mountain trekking photo -->
-            <img src="trekking.jpg" alt="Mountain Trekking" class="beyond-image">
+            <img src="E3414DD2-320A-4A9E-BD0E-9721716D18AB_Original.jpg" alt="Mountain Trekking" class="beyond-image">
             <p class="beyond-label">Trekking</p>
         </div>
         
