--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
     
     .project-image {
         width: 100%;
+        max-width: 450px;
         height: 200px;
         border-radius: 4px;
         margin: 6px 0;
-        object-fit: cover;
+        object-fit: contain;
         background: #f8f8f8;
         border: 1px solid #e0e0e0;
-        display: block;
     }
     
     .project-description {
