--- a/index.html
+++ b/index.html
@@ -374,4 +374,19 @@
 <footer class="contact">
     <h3>Contact</h3>
     <p style="color: #555; margin-bottom: 8px; font-size: 0.85rem;">
-        pandya.mu
+        pandya.mu@northeastern.edu<br>
+        Toronto, Ontario, Canada
+    </p>
+    
+    <div class="contact-links">
+        <a href="https://www.researchgate.net/profile/Mudra-Pandya">ResearchGate</a>
+        <a href="https://medium.com/@mudrawork27">Medium</a>
+        <a href="#">Google Scholar</a>
+        <a href="https://linkedin.com/in/mudrapandya">LinkedIn</a>
+        <a href="https://github.com/mudrap2706">GitHub</a>
+    </div>
+    
+    <p style="color: #999; font-size: 0.7rem; margin-top: 12px;">© 2025 Mudra Pandya</p>
+</footer>
+</body>
+</html>
