--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <a href="Airport_Operations_Database_Design_Human_Centered_Systems_Analysis.pdf">Technical Documentation</a>
             </div>
             
-            <img src="bcms_database.png" alt="BCMS Database Design" class="project-image">
+            <img src="airport.jpg" alt="BCMS Database Design" class="project-image">
             
             <p class="project-description"><strong>Challenge:</strong> Airport operations with fragmented systems causing inefficiencies in baggage handling and catering services.</p>
             <p class="project-description"><strong>Solution:</strong> Integrated relational database with 15+ entities, real-time tracking, and user-centered design for diverse stakeholders.</p>
