--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 <div class="project">
             <h3>WeCare: Elderly Care Mobile Application with Human-Centered Design</h3>
             <div class="project-links">
-                <a href="[YOUR-GITHUB-LINK]">Open in GitHub</a>
+                <a href="https://github.com/SpideyP00L/Flutter_Final_Project_WeCare">Open in GitHub</a>
                 <a href="#">UX Research</a>
                 <a href="#">Design Process</a>
             </div>
