--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="project-links">
                 <a href="https://github.com/SpideyP00L/Flutter_Final_Project_WeCare">Open in GitHub</a>
                 <a href="#">UX Research</a>
-                <a href="#">Design Process</a>
+               <a href="FinalUI:UX.pdf">Design Process</a>
             </div>
             
             <img src="wecare.png" alt="WeCare Mobile Application" class="project-image">
