--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
         <div class="nav-links">
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
-            <a href="#projects">Research</a>
-            <a href="#interests">Interests</a>
+            <a href="#cv">CV</a>
+            <a href="https://linkedin.com/in/mudrapandya" target="_blank">LinkedIn</a>
         </div>
         <p class="quote">"The best way to predict the future is to create it." — Peter Drucker</p>
         <div class="bio">
