--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 </head> <body> <header class="header"> <img src="profile.jpg" alt="Mudra Pandya" class="profile-img">
     <div class="header-content">
         <h1>Mudra Pandya</h1>
-        <div class="nav-links">
+       <div class="nav-links">
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
-            <a href="#cv">CV</a>
-            <a href="https://linkedin.com/in/mudrapandya" target="_blank">LinkedIn</a>
+            <a href="./Mudra Pandya CV.pdf" target="_blank">CV</a>
+            <a href="https://www.linkedin.com/in/mudra-pandya-0739641a0/" target="_blank">LinkedIn</a>
         </div>
         <p class="quote">"The best way to predict the future is to create it." — Peter Drucker</p>
         <div class="bio">
